# Dejoy-Machine-Terminal

./: API技術對接說明.docx  README.md
chrisCode/: nowTime.py  testServer.py
chrisCode/responseJson/: state.json
esp32Code/case1Esp32/: platformio.ini
esp32Code/case1Esp32/test/: dualCore.cpp  get&post.txt  mutithreading.cpp  queue.cpp  temp.cpp  wi-fi.cpp
picoCode/Pico-ESP8266/c/pico-esp8266/: CMakeLists.txt
picoCode/Pico-ESP8266/c/pico-esp8266/tcp_client/: CMakeLists.txt  tcp_client.cpp
picoCode/Pico-ESP8266/c/pico-esp8266/tcp_server/: CMakeLists.txt  tcp_server.cpp
picoCode/Pico-ESP8266/c/pico-esp8266/udp/: udp.cpp
picoCode/Pico-ESP8266/python/: UDP.py
pico程式/: main.py
pico程式/Pico-ESP8266/c/pico-esp8266/udp/: CMakeLists.txt
pico程式/Pico-ESP8266/python/: TCP_Client.py  TCP_Server.py
學生程式/: config_data_1.json  gpio.py  gpio2.py  server2.py  server_op1.py  test.py
學生程式/test/: gpio2.py
鎮宇程式/: testServer.py
鎮宇程式/responseJson/: power.json  webhook.json
鎮宇程式/test/: reqest.py
